refactor: remove dependencies of swaggo
